# HW1-FAST-AQ-Parser

./: pyproject.toml
seqparser/: seq.py
tests/: test_data.fa  test_data.fastq  test_parsers.py  test_transcribe.py
