[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "seqparser"
authors = [{name = "Sophie-Christine Porak", email = "Sophie.Porak@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
]

[project.urls]
Home = "https://github.com/sporak577/HW1-FAST-AQ-Parser"